; ModuleID = '/home/carl/AnghaBench/freebsd/sys/security/mac_partition/extr_mac_partition.c_partition_cred_relabel.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/security/mac_partition/extr_mac_partition.c_partition_cred_relabel.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ucred = type { i32 }
%struct.label = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ucred*, %struct.label*)* @partition_cred_relabel to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @partition_cred_relabel(%struct.ucred* %0, %struct.label* %1) #0 {
  %3 = alloca %struct.ucred*, align 8
  %4 = alloca %struct.label*, align 8
  store %struct.ucred* %0, %struct.ucred** %3, align 8
  store %struct.label* %1, %struct.label** %4, align 8
  %5 = load %struct.label*, %struct.label** %4, align 8
  %6 = icmp ne %struct.label* %5, null
  br i1 %6, label %7, label %18

7:                                                ; preds = %2
  %8 = load %struct.label*, %struct.label** %4, align 8
  %9 = call i64 @SLOT(%struct.label* %8)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %18

11:                                               ; preds = %7
  %12 = load %struct.ucred*, %struct.ucred** %3, align 8
  %13 = getelementptr inbounds %struct.ucred, %struct.ucred* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = load %struct.label*, %struct.label** %4, align 8
  %16 = call i64 @SLOT(%struct.label* %15)
  %17 = call i32 @SLOT_SET(i32 %14, i64 %16)
  br label %18

18:                                               ; preds = %11, %7, %2
  ret void
}

declare dso_local i64 @SLOT(%struct.label*) #1

declare dso_local i32 @SLOT_SET(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
